--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
     <div class="copyright-wrap">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-auto align-self-center"><p class="copyright-text text-center">© 2023 <a href="#">Fitmas.</a> All Rights Reserved.</p></div>
+                <div class="col-auto align-self-center"><p class="copyright-text text-center">© 2023 <a href="#">Pump Nation.</a> All Rights Reserved.</p></div>
             </div>                
         </div>
     </div>
