--- a/coming_soon.html
+++ b/coming_soon.html
@@ -62,16 +62,16 @@
                     </form>
                     <ul class="list-unstyled m-0">
                         <li>
-                            <a href="#"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/pumpnation2244"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/pumpnationsec14"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa-brands fa-google-plus-g" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/company/pumpnationfitness/"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></a>
                         </li>
                         <li class="p-0">
-                            <a href="#"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://www.youtube.com/channel/UCe5pUI9mvgAf8jhe7wOwRgA"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
