--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
                     </div>
                     <div class="info-card_content">
                         <p class="info-card_text">Gym Location</p>
-                        <a href="https://www.google.com/maps" class="info-card_link">Gurugram, Haryana</a>
+                        <a href="https://maps.app.goo.gl/mi5MjwRUjXGN8hdC6" class="info-card_link">Gurugram, Haryana</a>
                     </div>
                 </div>
                 <div class="info-card">
@@ -910,7 +910,7 @@
                     </div>
                     <div class="info-card_content">
                         <p class="info-card_text">Email Address</p>
-                        <a href="mailto:health@Fitmas.com" class="info-card_link">health@Fitmas.com</a>
+                        <a href="mailto:pumpnationfitness22@gmail.com" class="info-card_link">pumpnationfitness22@gmail.com</a>
                     </div>
                 </div>
                 <div class="info-card">
@@ -919,7 +919,7 @@
                     </div>
                     <div class="info-card_content">
                         <p class="info-card_text">Phone Number</p>
-                        <a href="tel:+18925382145" class="info-card_link">+91 88515 12929</a>
+                        <a href="tel:+918851512929" class="info-card_link">+91 88515 12929</a>
                     </div>
                 </div>
             </div>
