--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                 <img src="./assets/images/team_member_right_icon.png" alt="" class="img-fluid">
             </figure>
 
-            <section class="our_news_section" style="margin-top: 0 !important;">
+            <section class="our_news_section" style="margin-top: 0 !important; margin-bottom: 0 !important;">
                 <div class="container">
                     <div class="row" data-aos="fade-up">
                         <div class="owl-carousel owl-theme">
@@ -810,81 +810,6 @@
                     </div>
                 </div>
             </section>
-
-            <div class="row" data-aos="fade-up">
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                        <div class="team_member_box_content2">
-                            <div class="team_member_box_upper_portion">
-                                <figure class="mb-0">
-                                    <img src="./assets/images/trainer1.png" alt="" class="img-fluid">
-                                </figure>
-                            </div>
-                            <div class="team_member_box_lower_portion">
-                                <h5>MARVIN JOINER</h5>
-                                <p>Crossfit Coach</p>
-                                <div class="team_member_social_icons">
-                                    <a href="#" class="text-decoration-none">
-                                        <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
-                                    </a>
-                                    <!-- <a href="#" class="text-decoration-none">
-                                        <i class="fa-brands fa-twitter" aria-hidden="true"></i>
-                                    </a> -->
-                                    <a href="#" class="text-decoration-none">
-                                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                        <div class="team_member_box_content2">
-                            <div class="team_member_box_upper_portion">
-                                <figure class="mb-0">
-                                    <img src="./assets/images/trainer2.png" alt="" class="img-fluid">
-                                </figure>
-                            </div>
-                            <div class="team_member_box_lower_portion">
-                                <h5>PATRICIA WOODRUM</h5>
-                                <p>Cardio & Conditioning</p>
-                                <div class="team_member_social_icons">
-                                    <a href="#" class="text-decoration-none">
-                                        <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
-                                    </a>
-                                    <!-- <a href="#" class="text-decoration-none">
-                                        <i class="fa-brands fa-twitter" aria-hidden="true"></i>
-                                    </a> -->
-                                    <a href="#" class="text-decoration-none">
-                                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                        <div class="team_member_box_content2">
-                            <div class="team_member_box_upper_portion">
-                                <figure class="mb-0">
-                                    <img src="./assets/images/trainer3.png" alt="" class="img-fluid">
-                                </figure>
-                            </div>
-                            <div class="team_member_box_lower_portion">
-                                <h5>HANNAZ STONE</h5>
-                                <p>Fitness Coach</p>
-                                <div class="team_member_social_icons">
-                                    <a href="#" class="text-decoration-none">
-                                        <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
-                                    </a>
-                                    <!-- <a href="#" class="text-decoration-none">
-                                        <i class="fa-brands fa-twitter" aria-hidden="true"></i>
-                                    </a> -->
-                                    <a href="#" class="text-decoration-none">
-                                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-            </div>
         </div>
     </section>
     <!-- CONTACT US SECTION -->
