--- a/trainers.html
+++ b/trainers.html
@@ -25,6 +25,14 @@
     <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" type="text/css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css">
+
+    <style>
+        @media (max-width: 500px) {
+            .contact-card .info-card_link{
+                font-size: 18px;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -131,7 +139,7 @@
                         </figure>
                     </div>
                     <div class="team_member_box_lower_portion">
-                        <h5>HIMANSHU OBEROI</h5>
+                        <h5>SHEKHER</h5>
                         <p>Personal Trainer</p>
                         <!-- <div class="team_member_social_icons">
                             <a href="#" class="text-decoration-none">
@@ -155,7 +163,7 @@
                         </figure>
                     </div>
                     <div class="team_member_box_lower_portion">
-                        <h5>SHEKHER</h5>
+                        <h5>ABHISHEK</h5>
                         <p>Personal Trainer</p>
                         <!-- <div class="team_member_social_icons">
                             <a href="#" class="text-decoration-none">
@@ -181,7 +189,7 @@
                         </figure>
                     </div>
                     <div class="team_member_box_lower_portion">
-                        <h5>ABHISHEK</h5>
+                        <h5>HIMANSHU OBEROI</h5>
                         <p>Personal Trainer</p>
                         <!-- <div class="team_member_social_icons">
                             <a href="#" class="text-decoration-none">
