--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,14 @@
     <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" type="text/css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css">
+
+    <style>
+        @media (max-width: 500px) {
+            .contact-card .info-card_link{
+                font-size: 18px;
+            }
+        }
+    </style>
 </head>
 
 <body>
